--- a/myhome/src/main/resources/templates/board/list.html
+++ b/myhome/src/main/resources/templates/board/list.html
@@ -21,6 +21,7 @@
 <main class="flex-shrink-0">
     <div class="container">
         <h1 class="mt-5">게시판</h1>
+        <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>
     </div>
 </main>
 
