--- a/myhome/src/main/resources/templates/board/list.html
+++ b/myhome/src/main/resources/templates/board/list.html
@@ -22,7 +22,26 @@
     <div class="container">
         <h1 class="mt-5">게시판</h1>
         <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>
-    </div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">번호</th>
+              <th scope="col">제목</th>
+              <th scope="col">작성자</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr th:each="board : ${boards}">
+              <th th:text="${board.id}">1</th>
+              <td th:text="${board.title}">Mark</td>
+              <td>홍길동</td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="text-end">
+          <button type="button" class="btn btn-primary">쓰기</button>
+        </div>
+      </div>
 </main>
 
 
