--- a/myhome/src/main/resources/templates/fragments/common.html
+++ b/myhome/src/main/resources/templates/fragments/common.html
@@ -9,7 +9,7 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link href="sticky-footer-navbar.css" th:href="@{/sticky-footer-navbar.css}" rel="stylesheet">
+  <link href="sticky-footer-navbar.css" th:href="@{/css/sticky-footer-navbar.css}" rel="stylesheet">
 
   <title th:text="${title}">Hello, SpringBoot</title>
 <body>
