--- a/myhome/src/main/resources/templates/account/login.html
+++ b/myhome/src/main/resources/templates/account/login.html
@@ -15,14 +15,14 @@
       <main class="form-signin">
           <!-- 로그인 데이터 전송 -->
           <form th:action="@{/account/login}" method="post">
-            <img class="mb-4" src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+            <a th:href="@{/}"><img class="mb-4" src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"></a>
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-            
-            <!-- 에러 메시지 처리-->
+
+            <!-- 에러 처리-->
             <div th:if="${param.error}" class="alert alert-danger" role="alert">
                 Invalid username and password.
             </div>
-            <!-- 로그아웃 메시지 처리-->
+            <!-- 로그아웃 처리-->
             <div th:if="${param.logout}" class="alert alert-primary" role="alert">
                 You have been logged out.
             </div>
