--- a/myhome/src/main/resources/templates/account/register.html
+++ b/myhome/src/main/resources/templates/account/register.html
@@ -15,7 +15,7 @@
       <main class="form-signin">
           <!-- 로그인 데이터 전송 -->
           <form th:action="@{/account/register}" method="post">
-            <img class="mb-4" src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+            <a th:href="@{/}"><img class="mb-4" src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"></a>
             <h1 class="h3 mb-3 fw-normal">회원가입</h1>
 
           <div class="form-floating">
