--- a/myhome/src/main/resources/templates/fragments/common.html
+++ b/myhome/src/main/resources/templates/fragments/common.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- 실제로 보여줄 HTML -->
 
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extra/spring-security">
 <head th:fragment="head(title)">
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -29,7 +29,21 @@
           <li class="nav-item">
             <a class="nav-link" th:classappend="${menu}== 'board'? 'active'" href="#" th:href="@{/board/list}">게시판</a>
           </li>
+
+        <!-- 로그인 유무에 따라 분기처리하기 -->
         </ul>
+        <!-- 로그인이 안되어 있을때-->
+          <a class="btn btn-secondary mx-2 d-flex" th:href="@{/account/login}"
+          sec:authorize="!isAuthenticated()">로그인</a>
+          <a class="btn btn-secondary d-flex" th:href="@{/account/register}"
+          sec:authorize="!isAuthenticated()">회원가입</a>
+        <!-- 로그인 되어 있을때-->
+        <form class="d-flex" th:action="@{/logout}" method="POST" sec:authorize="isAuthenticated()">
+          <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+          <span class="text-white" sec:authentication="name">사용자</span>
+          <span class="text-white mx-2" sec:authentication="principal.authorities">권한</span>
+          <button class="btn btn-secondary" type="submit">로그아웃</button>
+        </form>
       </div>
     </div>
   </nav>
