Update : 게시글 View 현재 로그인 유저 정보 - 20210430

--- a/myhome/src/main/resources/templates/board/list.html
+++ b/myhome/src/main/resources/templates/board/list.html
@@ -46,7 +46,7 @@
               <th th:text="${board.id}">1</th>
               <!-- Thymeleaf 데이터 전달 -->
               <td><a th:text="${board.title}" th:href="@{/board/form(id=${board.id})}"></a></td>
-              <td>홍길동</td>
+              <td th:text="${board.user.username}">홍길동</td>
             </tr>
           </tbody>
         </table>
